objects/ProductPriceTable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BundleDiscount__c</fullName>
        <label>Bundle Discount</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DependentProduct__c</fullName>
        <label>Dependent Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentOfBase__c</fullName>
        <label>% of Base</label>
        <precision>5</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ProductPriceTable</label>
</CustomObject>